# Android_Notification_Summarize_Native

./: .gitignore  PROJECT_SUMMARY.md  README.md  gradle.properties  settings.gradle.kts  test_inference.kt  test_notifications.sh
app/: build.gradle.kts
app/src/androidTest/java/top/usagijin/summary/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_inference.cpp  native_model_loader.cpp  native_tokenizer.cpp  native_tokenizer.h
app/src/main/java/top/usagijin/summary/: .gitignore  MainActivity.kt  NotificationDetailActivity.kt  NotificationListenerService.kt  SettingsActivity.kt
app/src/main/java/top/usagijin/summary/adapter/: NotificationAdapter.kt  SummaryAdapter.kt
app/src/main/res/color/: bottom_nav_item_color.xml
app/src/main/res/drawable/: button_primary.xml  circle_indicator.xml  ic_app_default.xml  ic_pin.xml  ic_summarize.xml  ic_summary_simple.xml  ic_warning.xml  importance_indicator_background.xml  ripple_effect.xml  spinner_background.xml
app/src/main/res/layout/: activity_main.xml  fragment_notifications.xml  fragment_settings.xml  fragment_summaries.xml  item_notification.xml  item_summary.xml
app/src/main/res/menu/: bottom_navigation.xml
app/src/main/res/values/: colors.xml  dimens.xml  memory_config.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/java/top/usagijin/summary/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+31 files in other folders)
